# tde_fit

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: lightcurve_tde_01098.out  tde-lightcurve.out
src/tde_fit/: __init__.py
src/tde_fit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tde_fit/Data_Observational/Holoien_et_al_data/WebPlotDigitizer_files/: TDE_luminosities.tar  TDE_radii.tar  TDE_temperatures.tar
src/tde_fit/Data_Observational/Holoien_et_al_data/luminosities/: ASASSN-14ae_fluroblue.csv  ASASSN-14li_lightblue.csv  ASASSN-15lh_brightpink.csv  ASASSN-15oi_blue.csv  PS15br_red.csv  PS18kh_black.csv  SN2008es_pink.csv  SN2013hx_darkred.csv  iPTF16fnl_darkblue.csv
src/tde_fit/Data_Observational/Holoien_et_al_data/radii/: ASASSN-14ae_fluroblue.csv  ASASSN-14li_lightblue.csv  ASASSN-14li_lightblue.csv.LINEAR  ASASSN-14li_lightblue.csv.NOTLOG  ASASSN-15lh_brightpink.csv  ASASSN-15oi_blue.csv  PS15br_red.csv  PS18kh_black.csv  SN2008es_pink.csv  SN2013hx_darkred.csv  iPTF16fnl_darkblue.csv
src/tde_fit/Data_Observational/Holoien_et_al_data/temperatures/: ASASSN-14ae_fluroblue.csv  ASASSN-14li_lightblue.csv  ASASSN-15lh_brightpink.csv  ASASSN-15oi_blue.csv  PS15br_red.csv  (+4 more)
src/tde_fit/Data_Observational/VanVelzen_et_al_data/: evsplash.defaults  evsplash.exactfiles  evsplash.limits
src/tde_fit/Data_Observational/assasn18jd/: 18jd-Rbb2.txt  18jd-logT.txt  18jd-lum.txt
src/tde_fit/core/: __init__.py  lightcurve.py  lightcurve_plot.py  physics.py  pipeline.py  plot_lum.py
src/tde_fit/utils/: constants.py  conversions.py  survey_bands.py
